# ubuntu-unity-software-center

./: .gitlab-ci.yml  MAINTAINERS  NEWS  README.md  RELEASE  gnome-software.doap  meson.build  meson_options.txt  unity-software
.gitlab-ci/: README.md  cache-subprojects.sh  run-docker.sh  run-tests.sh
contrib/: gnome-software.spec.in  gs-plugin-example.c  install-sample-data.py
data/: meson.build  org.gnome.software.external-appstream.policy.in.in  org.gnome.software.gschema.xml  org.ubuntuunity.software.gschema.xml
data/appdata/: meson.build  org.gnome.Software.appdata.xml.in  org.ubuntuunity.software.appdata.xml.in
data/assets/: meson.build  org.gnome.Software.Featured.xml  org.ubuntuunity.software.Featured.xml
data/icons/hicolor/: meson.build
data/sample-data/: README.md  meson.build
data/sample-data/app-info/xmls/: org.unitysoftware.sample.xml
data/sample-data/applications/: org.unitysoftware.sample.desktop
data/sample-data/metainfo/: org.unitysoftware.sample.appdata.xml
doc/: kudos.md  privacy-policy.html  update.sh
lib/: README.md  gnome-software-private.h  gnome-software.h  gnome-software.pc.in  gs-app-collation.h  gs-app-list-private.h  gs-app-list.c  gs-app-list.h  gs-app-private.h  gs-app.c  gs-app.h  gs-category-private.h  gs-category.c  gs-category.h  gs-cmd.c  gs-debug.c  gs-debug.h  gs-metered.c  gs-os-release.c  gs-os-release.h  gs-plugin-event.c  gs-plugin-event.h  gs-plugin-job-private.h  gs-plugin-job.c  gs-plugin-job.h  gs-plugin-loader-sync.c  gs-plugin-loader-sync.h  gs-plugin-loader.c  gs-plugin-loader.h  gs-plugin-private.h  gs-plugin-types.h  gs-plugin-vfuncs.h  gs-plugin.c  gs-plugin.h  gs-self-test.c  gs-test.c  gs-test.h  gs-utils.c  gs-utils.h  meson.build  (+2 more)
plugins/: meson.build
po/: POTFILES.in  af.po  ar.po  as.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kab.po  kk.po  km.po  ko.po  lt.po  lv.po  mjw.po  (+26 more)
src/: gnome-software-local-file.desktop.in  gnome-software-service.desktop.in  gnome-software.gresource.xml  gnome-software.xml  gs-app-addon-row.c  gs-app-addon-row.h  gs-app-row.c  gs-app-row.h  gs-app-tile.c  gs-app-tile.h  gs-application.c  gs-application.h  gs-basic-auth-dialog.h  gs-category-page.c  gs-category-page.h  gs-category-tile.h  gs-common.c  gs-common.h  gs-content-rating.c  gs-content-rating.h  gs-css.c  gs-css.h  gs-dbus-helper.c  gs-dbus-helper.h  gs-details-page.c  gs-details-page.h  (+80 more)
(+94 files in other folders)
