install_data('scalable/org.ubuntuunity.software.svg',
                         install_dir : 'share/icons/hicolor/scalable/apps')
install_data('symbolic/org.ubuntuunity.software-symbolic.svg',
                         install_dir : 'share/icons/hicolor/symbolic/apps')
install_data('scalable/software-installed-symbolic.svg',
                         install_dir : 'share/icons/hicolor/scalable/status')
